<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.kbrazbaykus.istanbulrehberi.Turlar">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:layout_marginTop="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="20dp"
           android:textStyle="bold"
           android:fontFamily="casual"
           android:textAppearance="@style/TextAppearance.AppCompat.Headline"
           android:text="@string/rota"/>
   </LinearLayout>


    <RadioGroup
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <RadioButton
            android:id="@+id/birgun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birgun" />

        <RadioButton
            android:id="@+id/ikigun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"

            android:text="@string/ikigun" />

        <RadioButton
            android:id="@+id/ucgun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"

            android:text="@string/ucgun" />
    </RadioGroup>
<LinearLayout
    android:id="@+id/layouticerik"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/viewpager" />
    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:ci_drawable="@color/toolbarColor"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turBaslik"
        android:textSize="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
</LinearLayout>


   <Button
       android:id="@+id/haritadabul"
       android:layout_marginTop="450dp"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"

       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Rotayı gör"/>
</FrameLayout>
